# EstimatePI

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.old
config/: config.json  config2.json
include/: Config.h
include/gl/: CudaGLPiCalculator.h  GLFactory.h  GLPiCalculator.h
include/mc/: CudaMCPiCalculator.h  MCFactory.h  MCPiCalculator.h  OpenMPMCPiCalculator.h  PthreadMCPiCalculator.h
include/random/: Random.hpp  RandomBuilder.hpp
report/: cuda_2n_table.tex  cuda_precision_table.tex  openmp_2n_table.tex  openmp_precision_table.tex  pthreads_2n_table.tex  pthreads_precision_table.tex  report.tex  tables.py
src/: Config.cpp  main.cpp
src/cuda/: CudaGLPiCalculator.cu  CudaMCPiCalculator.cu
src/gl/: GLFactory.cpp
src/mc/: MCFactory.cpp  OpenMPMCPiCalculator.cpp  PthreadMCPiCalculator.cpp
